objects/LLC_BI__Product_Feature__c.object
<CustomObject>
    <description>The Product Feature Object stores information and details about specific features a product can have. The Product Feature is assigned to products to group them under similar features.</description>
    <fields>
        <fullName>JHJX__ATMCard__c</fullName>
        <description>Users populate this optional picklist to indicate if the account has an ATM Card. By default, it is No.</description>
        <label>ATM Card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__AcctReOpenCode__c</fullName>
        <description>Users populate this optional picklist to indicate if the system can reopen a closed account. By default, it is No.</description>
        <label>Allow Reopening of Closed Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__AllowReDepCode__c</fullName>
        <description>Users populate this optional picklist to indicate if the system can allow redeposit of foreign return items. By default, it is No.</description>
        <label>Allow Redposit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__AutoNSFFee__c</fullName>
        <description>Users populate this optional picklist to indicate the Automatic NSF fee. By default, it is Chg.</description>
        <label>Automatic NSF fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chg</fullName>
                    <default>true</default>
                    <label>Chg</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Wav</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ChgODCode__c</fullName>
        <description>Users populate this optional picklist to indicate if a continuous charge should occur when an account maintains a negative balance. By default, it is No.</description>
        <label>Charge a Continuous Charge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ChgODFeeDaysType__c</fullName>
        <description>Users populate this optional picklist to select the type of days to use when determining overdraft fees. By default, it is N/A.</description>
        <label>Type of Days to Charge Overdraft Fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CalDays</fullName>
                    <label>Actual Days</label>
                </value>
                <value>
                    <fullName>BusDays</fullName>
                    <label>Business Days</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ChgODFeeMax__c</fullName>
        <description>Users populate this optional number field with the maximum amount to charge for maintaining a negative balance. By default, it is N/A.</description>
        <label>Continuous OD Fee Max</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ChgODFeeMin__c</fullName>
        <description>Users populate this optional number field with the minimum amount to charge for maintaining a negative balance. By default, it is N/A.</description>
        <label>Continuous OD Fee Min</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ChgODFeePct__c</fullName>
        <description>Users populate this optional number field with the percentage used to determine the charge for maintaining a negative balance. By default, it is N/A.</description>
        <label>Continuous OD Fee Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ChgdOffAutoCode__c</fullName>
        <description>Users populate this optional picklist to select if the system should automatically charge off the account. By default, it is No.</description>
        <label>Automatically Charge Off Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ChkGuar__c</fullName>
        <description>Users populate this optional picklist to indicate the check guaranty. By default, it is No.</description>
        <label>Check Guaranty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ClsOnZeroBal__c</fullName>
        <description>Users populate this optional picklist to indicate if the system should automatically close the account when it maintains a zero balance for a required number of days. By default, it is No.</description>
        <label>Close On Zero Balance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ClubPin__c</fullName>
        <description>Users populate this optional number field to indicate a club type account. Users can enter a plan number to determine the plan type. By default, it is N/A.</description>
        <label>Club Plan</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__DlyNSFMaxChg__c</fullName>
        <description>Users populate this optional number field with the maximum amount the system can charge an account for NSF items daily. By default, it is N/A.</description>
        <label>Daily NSF Max</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__DlyODMaxChg__c</fullName>
        <description>The maximum amount an account can be charged for OD items daily.</description>
        <label>Daily OD Max</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__DlyUCFMaxChg__c</fullName>
        <description>Users populate this optional picklist to select the maximum amount the system can charge an account for items paid on uncollected funds daily. By default, it is N/A.</description>
        <label>Daily Uncollected Funds Max</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__EFTCardProdCode__c</fullName>
        <description>Users populate this required number field with the code that identifies the type details of an EFT card. By default, it is null.</description>
        <label>ISO Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ElecStmtChgWav__c</fullName>
        <description>Users populate this optional picklist to select the service charge method for electronic statements. By default, it is Chg.</description>
        <label>Electronic Statement Service Charge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chg</fullName>
                    <default>true</default>
                    <label>Chg</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Wav</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ElecStmtType__c</fullName>
        <description>Users populate this optional picklist to select the type of electronic statement. By default, it is Both.</description>
        <label>Type of Electronic Statement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                    <default>true</default>
                    <label>Both</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__HighVolAcctCode__c</fullName>
        <description>Users populate this optional picklist to indicate if this is a high-volume deposit account. By default, it is No.</description>
        <label>High Volume Deposit Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ImgIncCrCode__c</fullName>
        <description>Users populate this optional picklist to indicate if the system should include credit image items on the deposit periodic statement. By default, it is No.</description>
        <label>Include Credit Image Items</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ImgItemsFrntBackCode__c</fullName>
        <description>Users populate this optional picklist to indicate how the front and back of the image items should print on the deposit periodic statement. By default, it is 1.</description>
        <label>Print Image Items Front/Back</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ImgItemsPerPgCode__c</fullName>
        <description>Users populate this optional number field with the number of image items to print per page on the deposit periodic statement. By default, it is N/A.</description>
        <label>Print Images Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ImgPrtChkOrderCode__c</fullName>
        <description>Users populate this optional picklist to determine the order that checks print on the deposit periodic statement. By default, it is No.</description>
        <label>Print Checks in Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__IncCombStmt__c</fullName>
        <description>Users populate this optional picklist to indicate if the system should include this account in combined statement information. By default, it is No.</description>
        <label>Include on Combined Statement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__IntCycle__c</fullName>
        <description>Users populate this optional number field with the interest cycle. By default, it is N/A.</description>
        <label>Interest Cycle</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ItmTrunc__c</fullName>
        <description>Users populate this optional picklist to indicate if the system should use item truncation and safekeeping. By default, it is NoTrunc.</description>
        <label>Item Truncation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Img</fullName>
                </value>
                <value>
                    <fullName>ImgAndTrunc</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NoTrunc</fullName>
                    <default>true</default>
                    <label>NoTrunc</label>
                </value>
                <value>
                    <fullName>Trunc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__LstPostAcctCode__c</fullName>
        <description>Users populate this optional picklist to indicate if the system should summarize daily debit items for account posting. By default, it is No.</description>
        <label>Summarize Daily Debit Items</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__NumAllowReDepItems__c</fullName>
        <description>Users populate this optional number field with the allowable number of redeposit foreign return items. By default, it is N/A.</description>
        <label>Number of Redeposits</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ODLmt__c</fullName>
        <description>Users populate this optional number field with the overdraft limit code. By default, it is Chg</description>
        <label>Overdraft Limit Code</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ODNot1Days__c</fullName>
        <description>Users populate this optional number field with the number of days that must lapse before sending the first overdraft notice. By default, it is N/A.</description>
        <label>Number of Days Until First OD Notice</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ODNot2Days__c</fullName>
        <description>Users populate this optional number field with the number of days that must lapse before sending the second overdraft notice. By default, it is N/A.</description>
        <label>Number of Days Until Second OD Notice</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ODNot3Days__c</fullName>
        <description>Users populate this optional number field with the number of days that must lapse before sending the third overdraft notice. By default, it is N/A.</description>
        <label>Number of Days Until Third OD Notice</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__ODPrvlgOptType__c</fullName>
        <description>Users populate this optional picklist to indicate the overdraft privilege option type. By default, it is Decline.</description>
        <label>Overdraft Privilege Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elec</fullName>
                    <default>true</default>
                    <label>Elec</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ODPrvlgOptVal__c</fullName>
        <description>Users populate this optional picklist to indicate if the system should report overdraft plans to regulatory agencies. By default, it is No.</description>
        <label>Overdraft Privilege Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                    <default>true</default>
                    <label>Decline</label>
                </value>
                <value>
                    <fullName>Exmp</fullName>
                </value>
                <value>
                    <fullName>Inelgb</fullName>
                </value>
                <value>
                    <fullName>NoRs</fullName>
                </value>
                <value>
                    <fullName>Revo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ODRegRptCode__c</fullName>
        <description>The code used to determine how overdraft plans should be reported to regulatory agencies.</description>
        <label>Report to Regulatory Agencies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__PayIntEOMCode__c</fullName>
        <description>Users populate this optional picklist to indicate how to handle interest payments through the end of the month. By default, it is No.</description>
        <label>Handle Interest Payments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__PostAFTNSFCode__c</fullName>
        <description>Users populate this optional picklist to indicate how to handle automatic fund transfers for accounts with, or that could go into, a negative balance. By default, it is Do Not Post if NSF/Any Status.</description>
        <label>Post AFT NSF Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>Do Not Post if NSF/Any Status</label>
                </value>
                <value>
                    <fullName>Z</fullName>
                    <label>Do Not Post if NSF/No Restricted Status</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Post if NSF/Any Status</label>
                </value>
                <value>
                    <fullName>X</fullName>
                    <label>Post if NSF/No Restricted Status</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ReDepNotCode__c</fullName>
        <description>Users populate this optional picklist to indicate if the system should send redeposit notices. By default, it is No.</description>
        <label>Send Redeposit Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__SerChgCycle__c</fullName>
        <description>Users populate this optional picklist to determine when an institution debits the account for service charges. By default, it is Chg.</description>
        <label>Service Charge Cycle</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__SerChgWavRsnCode__c</fullName>
        <description>The Users populate this optional field to define the Waive Reason Code.  By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Waive Reason Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__SerChgWav__c</fullName>
        <description>The field that defines when an institution debits the account for service charges.</description>
        <label>Service Charge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chg</fullName>
                    <default>true</default>
                    <label>Chg</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Wav</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__SigVerifyCode__c</fullName>
        <description>Users populate this optional picklist to indicate if the system requires signature verification. By default, it is No.</description>
        <label>Signature Verification Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__StmtCycResetFreqCode__c</fullName>
        <description>Users populate this optional picklist to select the frequency to reset the counters that track the number of statements cycled/printed over time. By default, it is Service Charge Cycle.</description>
        <label>Freq to Reset Statement Cycle Counter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                    <label>Calendar month</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Interest cycle</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No Charge</label>
                </value>
                <value>
                    <fullName>Q</fullName>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <default>true</default>
                    <label>Service Charge Cycle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__StmtCycle__c</fullName>
        <description>Users populate this optional number field with the statement cycle. By default, it is N/A.</description>
        <label>Statement Cycle</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__StmtPasCode__c</fullName>
        <description>The code that designates if the account holder has a passbook for transaction posting.</description>
        <label>Statement or Passbook Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Pas</fullName>
                </value>
                <value>
                    <fullName>Stmt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Allow_Negative_Odd_Days__c</fullName>
        <description>Administrators and users populate this optional picklist field to determine if a loan applies negative odd days interest if the first payment is less than one unit period away from the projected close date.</description>
        <inlineHelpText>Select to allow negative odd days interest.</inlineHelpText>
        <label>Allow Negative Odd Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allow</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Allow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Allow_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional boolean field is manually entered. When true, this allows the associated product to be flagged and tracked as a participation.</description>
        <label>Allow Participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Allow_Syndication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional boolean field is manually entered. When true, this allows the associated product to be flagged and tracked as a syndication.</description>
        <label>Allow Syndication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Operating_Cost__c</fullName>
        <description>The annual cost involved in originating, servicing, and supporting a deposit product.</description>
        <label>Annual Operating Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Rate_Increase__c</fullName>
        <description>The administrator populates this optional field with how much the interest rate increases annually. The Annual Rate Increase is added to the Teaser Rate.</description>
        <inlineHelpText>This field displays how much the interest rate increases annually.</inlineHelpText>
        <label>Annual Rate Increase</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Term__c</fullName>
        <description>The average life of the deposit product in months.</description>
        <label>Average Term</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon_Product_Structure__c</fullName>
        <description>Administrators manually select Ballon Amount or Balloon Term from this picklist, which populates dependently on the Balloon__c field. Balloon Amount and Balloon Term determine how the Balloon calculation is performed, whether based on the total amount of the loan or the total duration of the loan.</description>
        <label>Balloon Product Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balloon Amount</fullName>
                </value>
                <value>
                    <fullName>Balloon Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators manually select this optional boolean field to indicate whether the product is a Balloon product. By default, it is false.</description>
        <label>Balloon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CD_Term__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the length of time from the opening date of the time deposit to the maturity date (for example, 91 days 18 months).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The length of time from the opening date of the time deposit to the maturity date (e.g. 91 days 18 months).</inlineHelpText>
        <label>CD Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capitalize_Interest__c</fullName>
        <description>The user populates this optional picklist to determine if the interest on a loan is capitalized for the specified product. By default, it is blank.</description>
        <inlineHelpText>This field determines if the interest on your loan is capitalized for the product feature.</inlineHelpText>
        <label>Capitalize Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Checking_Withdrawal_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox field is manually populated during configuration and is used as an indicator flag for document preparation.</description>
        <label>Checking Withdrawal Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collect_Odd_Days_Interest__c</fullName>
        <description>Administrators and users populate this optional picklist field to determine if a loan applies odd days interest and when that interest applies to the loan.</description>
        <inlineHelpText>Select an option to collect odd days interest.</inlineHelpText>
        <label>Collect Odd Days Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add to First Payment</fullName>
                </value>
                <value>
                    <fullName>Collect When Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>